authentication, profile page, intro, markdown

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ReactJS | Somesite.com</title>
+    <title>Fundingrate.io | Dashboard</title>
     <!-- <meta
       name="description"
       content="Some site details."
