add google analytics

--- a/index.html
+++ b/index.html
@@ -14,4 +14,19 @@
     <div id="app"></div>
     <script src="./src/index.js"></script>
   </body>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=UA-86040224-4"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "UA-86040224-4");
+  </script>
 </html>
