--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="react, js, javascript, boilerplate" />
     <meta name="author" content="tacyarg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://highlightjs.org/static/demo/styles/railscasts.css" />
   </head>
   <body>
     <div id="app"></div>
