--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     />
     <meta name="keywords" content="react, js, javascript, boilerplate" />
     <meta name="author" content="tacyarg" /> -->
+    <meta charset="UTF-8" /> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://highlightjs.org/static/demo/styles/railscasts.css" />
   </head>
